--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="js/script.js" defer></script>
+    <script src="js/mapScript.js" defer></script>
 </head>
 <body>
     <h1>Minha Localização Atual no Mapa</h1>
