--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa com Geolocalização</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mapStyle.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="js/mapScript.js" defer></script>
