--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,8 +35,9 @@
 
           <div class="criarConta">
               <p>Não tem uma conta?</p>
-              <a href="">Criar Conta</a>
+              <a href="/">Criar Conta</a>
           </div>
+          <a href="/registerCar">carro</a>
         
     </main>
 
