cadastro de usuário funcionando (falta validação de formulário)

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,7 +35,7 @@
 
           <div class="criarConta">
               <p>Não tem uma conta?</p>
-              <a href="">Criar Conta</a>
+              <a href="/registerUser">Criar Conta</a>
           </div>
         
     </main>
