--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <a href="index.html"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
+        <a href="/"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
         <div class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
     </header>
 
@@ -18,15 +18,15 @@
 
         <h1>CADASTRO</h1>
 
-        <form>
+        <form action="/user" method="post">
               <div class="mb-3">
                 <label for="userCPF" class="form-label">CPF</label>
-                <input type="text" id="userCPF" class="form-control" placeholder="Digite seu CPF" required>
+                <input type="text" id="userCPF" class="form-control" name="cpf" placeholder="Digite seu CPF" required>
               </div>
 
               <div class="mb-3">
                 <label for="userEmail" class="form-label">E-mail</label>
-                <input type="email" id="userEmail" class="form-control" placeholder="Digite seu e-mail" required>
+                <input type="email" id="userEmail" class="form-control" name="email" placeholder="Digite seu e-mail" required>
               </div>
 
               <div class="mb-3">
@@ -36,7 +36,7 @@
 
               <div class="mb-3">
                 <label for="senhaInput" class="form-label">Senha</label>
-                <input type="password" id="senhaInput" class="form-control" placeholder="Digite sua senha" required>
+                <input type="password" id="senhaInput" class="form-control" name="password" placeholder="Digite sua senha" required>
               </div>
 
               <div class="mb-3">
@@ -49,13 +49,12 @@
                 <label class="form-check-label termosUso" for="termosUso">Li e estou de acordo com os termos de uso</label>
               </div>
              
-              <button type="submit" id="criarConta" class="btn btn-primary button" disabled>Criar conta</button>
+              <button type="submit" id="criarConta" class="btn btn-primary button">Criar conta</button>
           </form>
         
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 
 </body>
 </html>
