--- a/telas/css/styleHome.css
+++ b/telas/css/styleHome.css
@@ -11,8 +11,10 @@
 body{
     background-color: #252525 !important;
     color: white !important;
-    scale: 0.9;
-    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header{
@@ -28,13 +30,20 @@ main {
     width: 100vw;
 }
 
+footer {
+    background-color: #1730A5;
+    scale: 1.1125;
+    position: absolute;
+    bottom: 0;
+}
+
 .userInfo {
     display: flex;
     justify-content: start;
     align-items: center;
     padding: 10px 2%;
     border-radius: 20% / 200%;
-    width: 70vw;
+    width: 50vw;
 }
 
 .hello {
@@ -88,7 +97,24 @@ main {
     background-color: #fd642c;
     border-radius: 20% / 100%;
     padding: 2% 5%;
+}
 
+.barraTarefas {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 10vw;
+}
+
+.barraTarefas li {
+    width: 14vw;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+li img {
+    width: 32px ;
 }
 
 @media (min-width: 361px){
