--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Login</title>
-</head>
-<body>
-
+  </head>
+    <script>
+      let data = JSON.parse('<%- JSON.stringify(user) %>')
+      localStorage.setItem("usuario", JSON.stringify(data))
+    </script>
+  <body>
     <header>
       <div class="logo" style="margin-top: 15vh;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
     </header>
 
     <main>
-
         <h1>LOGIN</h1>
 
         <form>
@@ -38,6 +40,7 @@
               <a href="/registerUser">Criar Conta</a>
           </div>
           <a href="/registerCar">carro</a>
+          <a href="/adminCars">admincars</a>
         
     </main>
 
