diferentes telas iniciais para os tipos de usuário

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,8 +8,7 @@
     <title>Login</title>
   </head>
     <script>
-      let data = JSON.parse('<%- JSON.stringify(user) %>')
-      localStorage.setItem("usuario", JSON.stringify(data))
+      localStorage.setItem("id", 1);
     </script>
   <body>
     <header>
@@ -40,7 +39,7 @@
               <a href="/registerUser">Criar Conta</a>
           </div>
           <a href="/registerCar">carro</a>
-          <a href="/adminCars">admincars</a>
+          <a href="/homePage">Home</a>
         
     </main>
 
