--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styleHome.css">
+    <!-- <link rel="stylesheet" href="./css/styleHome.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Home</title>
+    <script>
+        localStorage.setItem("id", <%= id %>);
+    </script>
 </head>
 <body>
 
     <header>
         <div class="info">
-            <div class="userInfo hello"><p>Olá, Manuel Gomes</p></div>
+            <div class="userInfo hello"><p>Olá, Usuário</p></div>
             <div class="userInfo"><p>Volkswagen Gol 2017</p></div>
         </div>
         <div class="carro">
@@ -45,9 +48,9 @@
         </section>
 
     </main>
-    <footer>
+    <footer style="background-color: bisque;">
         <ul class="barraTarefas">
-            <li><img src="../public/img/car.png" alt="cars"></li>
+            <li><a href="/adminCars"><img src="../public/img/car.png" alt="cars"></a></li>
             <li><img src="../public/img/warning.png" alt="warning"></li>
             <li><img src="../public/img/home.png" alt="home"></li>
             <li><img src="../public/img/notification.png" alt="notifications"></li>
