bug corrigido (tela inicial não renderiza)

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,23 +22,23 @@
   </header>
 
   <main>
-    <% if (msg != '') { %>
+    <!-- <%// if (msg != '') { %>
       <script>
           alert("user já existe, por favor faça login");
       </script>
-    <% } %>
+    <% //} %>
 
-    <% if (notFound != '') { %>
+    <%// if (notFound != '') { %>
       <script>
           alert("O login não existe, por favor cadastre-se");
       </script>
-    <% } %>
+    <%// } %>
 
-    <% if (incorrect != '') { %>
+    <%// if (incorrect != '') { %>
       <script>
           alert("senha ou user incorretos");
       </script>
-    <% } %>
+    <%// } %> -->
 
     <h1>LOGIN</h1>
 
