--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -21,7 +21,7 @@
         <form action="/user" method="post">
               <div class="mb-3">
                 <label for="userCPF" class="form-label">CPF</label>
-                <input type="text" id="userCPF" class="form-control" name="CPF" placeholder="Digite seu CPF" required>
+                <input type="text" id="userCPF" class="form-control" name="cpf" placeholder="Digite seu CPF" required>
               </div>
               
               <div class="mb-3">
