--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -2,62 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/home.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./css/styleHome.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Home</title>
-    <script>
-        localStorage.setItem("id", <%= id %>);
-    </script>
 </head>
 <body>
-
     <header>
-        <div class="info">
-            <div class="userInfo hello"><p>Olá, Usuário</p></div>
-            <div class="userInfo"><p>Volkswagen Gol 2017</p></div>
+        <div class="navegacao">
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4 links">
+                    <a href="/viewCar" class="text-white h4 ancora">Meu carro</a>
+                    <a href="/viewAccount" class="text-white h4 ancora">Minha conta</a>
+                    <a href="/notification" class="text-white h4 ancora">Notificações</a>
+                    <span class="text-muted">Toggleable via the navbar brand.</span>
+                </div>
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
         </div>
-        <div class="carro">
-            <img src="../public/img/gol.png" alt="">
+
+        <div class="content">
+            <p class="hello">Olá, <%=user.Name %></p>
+            <img class="car" src="/img/gol.png" alt="">
         </div>
+
     </header>
     <main>
-        <section class="quilometragem">
-            <div class="rodados">
-                <div class="orange-label">
-                    <label for="Kms">Quilômetros Rodados</label>
-                </div>
-                <div>
-                    <span id="Kms">100.000</span>
-                    <span>Km</span>
+        <div class="cards master">
+            <div class="card-header">
+                <div class="title">
+                    <h1>QUILÔMETROS RODADOS</h1>
                 </div>
             </div>
-        </section>
-        <section class="">
-            <div class="rodados">
-                <div class="orange-label">
-                    <label for="Kms">Quilômetros Rodados</label>
-                </div>
-                <div>
-                    <span id="Kms">100.000</span>
-                    <span>Km</span>
-                </div>
+            <div class="card-content">
+                <p>333,33 KM</p>
             </div>
+        </div>
 
-        </section>
+        <div class="cards">
+            <div class="card-header">
+                <img class="icon" src="/img/saúde.png" alt="">
+                <h1>SAÚDE ELÉTRICA</h1>
+            </div>
+            <div class="card-content">
+                <p>Saudável</p>
+            </div>
+            <button type="submit" class="details">detalhes</button>
+        </div>
 
+        <div class="cards">
+            <div class="card-header">
+                <img class="icon" src="/img/saúde.png" alt="">
+                <h1>GASOLINA</h1>
+            </div>
+            <div class="card-content">
+                <p>33L</p>
+            </div>
+            <button type="submit" class="details">detalhes</button>
+        </div>
+
+        <div class="cards">
+            <div class="card-header">
+                <img class="icon" src="/img/saúde.png" alt="">
+                <h1>ÓLEO</h1>
+            </div>
+            <div class="card-content">
+                <p>NÍVEL ALTO</p>
+            </div>
+            <button type="submit" class="details">detalhes</button>
+        </div>
+
+        <div class="cards">
+            <div class="card-header">
+                <img class="icon" src="/img/saúde.png" alt="">
+                <h1>ÁGUA</h1>
+            </div>
+            <div class="card-content">
+                <p>NÍVEL MÉDIO</p>
+            </div>
+            <button type="submit" class="details">detalhes</button>
+        </div>
     </main>
-    <footer style="background-color: bisque;">
-        <ul class="barraTarefas">
-            <li><a href="/adminCars"><img src="../public/img/car.png" alt="cars"></a></li>
-            <li><img src="../public/img/warning.png" alt="warning"></li>
-            <li><img src="../public/img/home.png" alt="home"></li>
-            <li><img src="../public/img/notification.png" alt="notifications"></li>
-            <li><img src="../public/img/user.png" alt="profile"></li>
-        </ul>
+
+    <footer>
+        <img class="icon" src="/img/car.png" alt="">
+        <img class="icon" src="/img/notification.png" alt="">
+        <img class="icon" src="/img/home.png" alt="">
+        <img class="icon" src="/img/user.png" alt="">
     </footer>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
