--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -94,10 +94,10 @@
     </main>
 
     <footer>
-        <img class="icon" src="/img/car.png" alt="">
-        <img class="icon" src="/img/notification.png" alt="">
-        <img class="icon" src="/img/home.png" alt="">
-        <img class="icon" src="/img/user.png" alt="">
+        <img class="icon" src="/img/car.png">
+        <img class="icon" src="/img/notification.png">
+        <img class="icon" src="/img/home.png">
+        <img class="icon" src="/img/user.png">
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
