--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Login</title>
 </head>
 <body class='modeAtual'>
@@ -22,21 +24,15 @@
   </header>
 
   <main>
-    <%if (msg != '') { %>
-      <script>
-          alert("user já existe, por favor faça login");
-      </script>
-    <% } %>
-
     <%if (notFound != '') { %>
       <script>
-          alert("O login não existe, por favor cadastre-se");
+          alert("Usuário não encontrado!");
       </script>
     <%} %>
 
     <%if (incorrect != '') { %>
       <script>
-          alert("senha ou user incorretos");
+          alert("Senha Incorreta!");
       </script>
     <%} %>
 
@@ -64,43 +60,5 @@
     </div>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      if (localStorage.getItem('light-mode') === 'enabled') {
-        document.body.classList.add('light-mode');
-        document.getElementById('modeToggle').src = 'img/sun.png';
-      }
-    });
-
-    function toggleDarkMode() {
-      const lightModeEnabled = document.body.classList.toggle('light-mode');
-      localStorage.setItem('light-mode', lightModeEnabled ? 'enabled' : 'disabled');
-      document.getElementById('modeToggle').src = lightModeEnabled ? 'img/sun.png' : 'img/moon.png';
-    }
-  </script>
-
-<script>
-  function formatCPF(cpfField) {
-      const cpf = cpfField.value.replace(/\D/g, '');
-      let formattedCPF = '';
-
-      if (cpf.length > 0) {
-          formattedCPF = cpf.substring(0, 3);
-      }
-      if (cpf.length >= 4) {
-          formattedCPF += '.' + cpf.substring(3, 6); 
-      }
-      if (cpf.length >= 7) {
-          formattedCPF += '.' + cpf.substring(6, 9); 
-      }
-      if (cpf.length >= 10) {
-          formattedCPF += '-' + cpf.substring(9, 11);
-      }
-
-      cpfField.value = formattedCPF; 
-  }
-</script>
 </body>
 </html>
