--- a/src/views/homePageAdmin.ejs
+++ b/src/views/homePageAdmin.ejs
@@ -13,6 +13,7 @@
 <body>
 
     <header>
+        <% console.log(users) %>
 
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
