localização do carro vindo do banco

--- a/src/views/viewCar.ejs
+++ b/src/views/viewCar.ejs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa com Geolocalização</title>
-    <link rel="stylesheet" href="css/mapStyle.css">
+    <link rel="stylesheet" href="/css/mapStyle.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="js/mapScript.js" defer></script>
+    <script src="/js/mapScript.js" defer></script>
 </head>
-<body>
+<body onload="updateMarker(<%= coord['Coordinate.Latitude'] %>, <%= coord['Coordinate.Longitude'] %>)">
     <h1>Minha Localização Atual no Mapa</h1>
     <div id="map"></div>
-
 </body>
 </html>
