--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,13 +24,13 @@
   </header>
 
   <main>
-    <%if (notFound != '') { %>
+    <%if (notFound) { %>
       <script>
           alert("Usuário não encontrado!");
       </script>
     <%} %>
 
-    <%if (incorrect != '') { %>
+    <%if (incorrect) { %>
       <script>
           alert("Senha Incorreta!");
       </script>
