--- a/src/views/userCars.ejs
+++ b/src/views/userCars.ejs
@@ -1,78 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/homeAdmin.css">
-    <title>Document</title>
-</head>
-<body>
-
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/homeAdmin.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-
-
     <header>
-
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
                   <h5 class="text-white h4">SUA CONTA</h5>
                   <h5 class="text-white h4">AJUDA</h5>
-                  <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
-              </div>
-              <nav class="navbar navbar-dark bg-dark">
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
                 <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
+                    </button>
                 </div>
-              </nav>
+            </nav>
         </div>
-
-        <div class="content" >
-            <p class="hello">OLÁ, ADMINISTRADOR</p>
-            <p class="title-gerenciamento">GERENCIAMENTO DE <br> USUÁRIOS</p>
-        </div>
-
     </header>
     <main>
-
-
-         <div class="cards-admin">
-            <div class="card-header">
-                <img class="icon" src="img/user.png" alt="">
-                <h1>Mário</h1>
-                <img class="icon" src="img/avançar-light.png" alt="">
-        </div>
+        
+        <h1>Seus Carros</h1>
+        
+        <% for(let i = 0; i < vehicles.length; i++) { %>
+            
+            <div class="cards-admin">
+                <div class="card-header">
+                    <a href="/car/<%= vehicles[i].IDVehicle %>"><h1><%= vehicles[i].Model %></h1></a>
+                    <!-- <img class="icon" src="img/avançar-light.png" alt=""> -->
+                </div>
+            </div>
+            
+        <% } %>
 
     </main>
-
     <footer>
-        <img class="icon" src="img/car.png" alt="">
+        <!-- <img class="icon" src="img/car.png" alt="">
         <img class="icon" src="img/notification.png" alt="">
         <img class="icon" src="img/home.png" alt="">
-        <img class="icon" src="img/user.png" alt="">
+        <img class="icon" src="img/user.png" alt=""> -->
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-</body>
-</html>
-
-
-    
 </body>
 </html>
