--- a/public/css/homeAdmin.css
+++ b/public/css/homeAdmin.css
@@ -33,7 +33,7 @@ a:hover{
 }
 
 .navegacao {
-    width: 100%; /* Ocupa toda a largura da tela */
+    width: 100%; 
 }
 
 .navegacao
@@ -47,15 +47,15 @@ a:hover{
 }
 
 .navbar {
-    height: 60px; /* Ajuste a altura da barra de navegação conforme necessário */
+    height: 60px; 
 }
 
 .navbar-brand {
-    font-size: 1.5rem; /* Tamanho da fonte do nome da marca */
+    font-size: 1.5rem; 
 }
 
 .navbar-nav .nav-link {
-    padding: 15px; /* Ajuste o padding dos itens de navegação */
+    padding: 15px; 
 }
 
 .title-gerenciamento {
@@ -88,9 +88,7 @@ a:hover{
 
 
 main {
-    display: grid;
-    /* grid-template-columns: repeat(2, 140px);  */
-    grid-template-rows: auto; 
+    display: flex;
     gap: 20px; 
     justify-content: center; 
     margin: 10px;
@@ -129,6 +127,7 @@ header img {
     text-align: center;
     box-sizing: border-box;
     padding-top: 10px;
+    cursor: pointer;
 
 }
 
@@ -170,16 +169,15 @@ header img {
     margin: 0;
 }
 
+.cards-admin:hover{
+    background-color: rgb(40, 38, 38);
+}
+
 .cards-admin button {
-    padding: 7px;
+
+    background-color: transparent;
     border: none;
-    border-radius: 10px;
-    background-color: orange;
-    width: 90%;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    
 }
 
 .icon {
@@ -198,6 +196,16 @@ footer {
     gap: 20%;
 }
 
+@media(max-width : 511px)
+{
+     main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+     }
+}
+
 @media (max-width: 719px) {
 
     header .navegacao {
@@ -208,11 +216,10 @@ footer {
 
 @media (min-width: 620px) {
     main {
-        display: grid;
-        /* grid-template-columns: repeat(4, 140px);  */
-        grid-template-rows: auto; 
-        gap: 20px; 
+        display: flex;
+        margin: 10px;
         justify-content: center; 
+        align-items: flex-start;
         margin: 60px;
         flex: 1; 
     }
