--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,7 +26,7 @@
   <main>
     <%if (notFound != '') { %>
       <script>
-          alert("Usuário não encontrado!");
+          alert("Usuário não existe! Por favor crie sua conta");
       </script>
     <%} %>
 
