--- a/src/views/informacoesUsers.ejs
+++ b/src/views/informacoesUsers.ejs
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/homeAdmin.css">
+    <link rel="stylesheet" href="/css/informacoesUser.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<title>Home admin</title>
+<title>usuário</title>
 </head>
 <body>
 
     <header>
-        <% console.log(users) %>
 
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
@@ -33,31 +32,37 @@
         </div>
 
         <div class="content" >
-            <p class="hello">OLÁ, ADMINISTRADOR! </p>
             <p class="title-gerenciamento">GERENCIAMENTO DE <br> USUÁRIOS</p>
         </div>
-
-
-        <input type="text" id="searchBar" placeholder="Procure aqui..." onkeyup="searchFunction()">
-
-
     </header>
     <main id="userList">
 
-        <% for(let i = 0; i < users.length; i++) {%>
+        <form action="/informacoesUsers/<%=currentUser.IDUser%>/<%=admin%>" method="post" class="row g-3">
 
-                 <div class="cards-admin">
-                     <div class="card-header">
-                         <img class="icon" src="/img/user.png" alt="">
-                         <h1 style="margin: 7px;" > <%=users[i].Name%></h1>
-                         <form action="/informacoesUsers/<%=users[i].IDUser%>/<%=login.IDUser%>" method="get">
-                            <button id="redirecionar" type="submit" ><img class="icon" src="/img/avançar-light.png" alt=""></button>
-                        </form>
-                    </div>
+                <div class="col-md-6">
+                  <label for="inputEmail4" class="form-label">ID Usuário</label>
+                  <input type="text" class="form-control" id="userId" value="<%=currentUser.IDUser %>" readonly >
                 </div>
-             </form>
+                <div class="col-md-6">
+                  <label for="inputPassword4" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="userName" value="<%=currentUser.Name%>" readonly >
+                </div>
+                <div class="col-12">
+                  <label for="inputAddress" class="form-label">Email</label>
+                  <input type="text" class="form-control" id="userEmail" value="<%=currentUser.Email %>"  readonly >
+                </div>
 
-        <% } %>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Permição</label>
+                    <input type="text" class="form-control" id="userAllow" value="<%= currentUser.IsAdmin == 1? "Administrador" : "Usuário" %>" readonly >
+                </div>
+
+                <div class="col-12 controler">
+                    <input class="btn btn-primary" value="Promover a administrador" onclick="updateUser()" style="width: 260px;" readonly/>
+                    <a href="/homePageAdmin/<%=admin%>" class="btn btn-danger">Cancelar</a>
+                    <input class="btn btn-primary" value="Pronto" type="submit"/>
+                </div>
+        </form>
 
     </main>
 
@@ -73,27 +78,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
-        function searchFunction() {
-        var input, filter, userList, cards, h1, i, txtValue;
-        input = document.getElementById('searchBar');
-        filter = input.value.toLowerCase();
-        userList = document.getElementById("userList");
-        cards = userList.getElementsByClassName('cards-admin');
-        
-        // Esconde todos os cards
-        for (i = 0; i < cards.length; i++) {
-            cards[i].style.display = "none";
-        }
-
-        for (i = 0; i < cards.length; i++) {
-            h1 = cards[i].getElementsByTagName("h1")[0];
-            txtValue = h1.textContent || h1.innerText;
-            if (txtValue.toLowerCase().indexOf(filter) > -1) { // retona -1 se nn for enconytrado, o indexof retorna a posição de um termo em um  array
-                cards[i].style.display = "block";
-            }
-        }
-    }
-
+         const allow = document.getElementById("userAllow");
+         const updateUser = () =>
+         {
+            if(allow.value == "Usuário")
+                allow.value = "Administrador"
+            else
+                allow.value = "Usuário"
+         }
     </script>
+
 </body>
 </html>
