--- a/src/views/allCars.ejs
+++ b/src/views/allCars.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/homeAdmin.css">
+    <link rel="stylesheet" href="/css/adminCars.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<title>Home admin</title>
+<title>Carros</title>
 </head>
 <body>
 
@@ -18,8 +18,8 @@
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
                     <a href="/viewAccout" class="text-white h4 ancora">Minha conta</a>
-                    <form action="/allCars/<%=login.IDUser%>">
-                        <button>Carros</button>
+                    <form action="/homePageAdmin/<%=id%>">
+                        <button>Voltar ao menu</button>
                     </form>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
@@ -35,30 +35,30 @@
 
         <div class="content" >
             <p class="hello">OLÁ, ADMINISTRADOR! </p>
-            <p class="title-gerenciamento">GERENCIAMENTO DE <br> USUÁRIOS</p>
+            <p class="title-gerenciamento">GERENCIAMENTO DE <br> CARROS</p>
         </div>
 
 
         <input type="text" id="searchBar" placeholder="Procure aqui..." onkeyup="searchFunction()">
     </header>
     <main id="userList">
-        <div class="container" >
-    
-            <% for(let i = 0; i < users.length; i++) {%>
-    
-                     <div class="cards-admin">
-                         <div class="card-header">
-                             <img class="icon" src="/img/user.png" alt="">
-                             <h1 style="margin: 7px;" > <%=users[i].Name%></h1>
-                             <form action="/informacoesUsers/<%=users[i].IDUser%>/<%=login.IDUser%>" method="get">
-                                <button id="redirecionar" type="submit" ><img class="icon" src="/img/avançar-light.png" alt=""></button>
-                            </form>
-                        </div>
-                    </div>
-                 </form>
-    
-            <% } %>
-        </div>
+
+        <% for(let i = 0; i < results.length; i++) {
+            for(let j = 0; j < results[i].length; j++) {%>
+
+                 <div class="cards-admin">
+                     <div class="card-header">
+                         <img class="icon" src="/img/car.png" alt="">
+                         <h1 style="margin: 7px;"> <%= results[i][j].Model%></h1>
+                     </div>
+                         <div class="card-content">
+                             <h1> Placa: <%= results[i][j].Plate %></h1>
+                             <h1> Ano: <%= results[i][j].Year %></h1>
+                             <h1> Dono: <%= results[i][j].Name%></h1>
+                         </div>
+                </div>
+
+        <% }} %>
 
     </main>
 
@@ -75,25 +75,30 @@
 
     <script>
         function searchFunction() {
-        var input, filter, userList, cards, h1, i, txtValue;
-        input = document.getElementById('searchBar');
-        filter = input.value.toLowerCase();
-        userList = document.getElementById("userList");
-        cards = userList.getElementsByClassName('cards-admin');
-        
-        // Esconde todos os cards
-        for (i = 0; i < cards.length; i++) {
-            cards[i].style.display = "none";
-        }
-
-        for (i = 0; i < cards.length; i++) {
-            h1 = cards[i].getElementsByTagName("h1")[0]; //retorna só o primerio elemento h1 que encontrar
-            txtValue = h1.textContent || h1.innerText;
-            if (txtValue.toLowerCase().indexOf(filter) > -1) { // retona -1 se nn for enconytrado, o indexof retorna a posição de um termo em um  array
-                cards[i].style.display = "block";
+            var input, filter, userList, cards, card, h1s, i, j, txtValue;
+            input = document.getElementById('searchBar');
+            filter = input.value.toLowerCase();
+            userList = document.getElementById("userList");
+            cards = userList.getElementsByClassName('cards-admin');
+    
+ 
+            for (i = 0; i < cards.length; i++) {
+                cards[i].style.display = "none";
             }
-        }
-    }
+
+            for (i = 0; i < cards.length; i++) {
+                card = cards[i];
+                h1s = card.getElementsByTagName("h1");
+            
+                for (j = 0; j < h1s.length; j++) {
+                    txtValue = h1s[j].textContent || h1s[j].innerText;
+                    if (txtValue.toLowerCase().indexOf(filter) > -1) {
+                        card.style.display = "block";
+                        break;
+                    }
+                }
+            }
+}
 
     </script>
 </body>
