--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -19,6 +19,7 @@
                     <a href="/userCars/<%= user.IDUser %>" class="text-white h4 ancora">Meu carro</a>
                     <a href="/viewAccount" class="text-white h4 ancora">Minha conta</a>
                     <a href="/notification" class="text-white h4 ancora">Notificações</a>
+                    <a href="/" class="text-white h4 ancora">Sair</a>
                     <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
             </div>
