--- a/src/views/registerCar.ejs
+++ b/src/views/registerCar.ejs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Cadastrar Carro</title>
-  <script src="script.js" defer></script>
+  <script src="/js/registerCar.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
 
         <h1>CADASTRE SEU CARRO</h1>
 
-        <form action="/registerCar" method="post">
+        <form action="/registerCar/<%= user %>" method="post">
               <div class="mb-3">
                 <label for="carPlate" class="form-label">Placa</label>
                 <input type="text" id="carPlate" class="form-control" name="plate" placeholder="Digite a placa de seu carro" required>
