--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -18,7 +18,7 @@
                     <a href="/userCars/<%=login.IDUser%>" class="text-white h4 ancora">Meu carro</a>
                     <a href="/viewAccount" class="text-white h4 ancora">Minha conta</a>
                     <a href="/notification" class="text-white h4 ancora">Notificações</a>
-                    <span class="text-muted">Toggleable via the navbar brand.</span>
+                    <a href="/" class="text-white h4 ancora">Sair</a>
                 </div>
             </div>
             <nav class="navbar navbar-dark bg-dark">
