css admin funcional

--- a/public/css/homeAdmin.css
+++ b/public/css/homeAdmin.css
@@ -33,13 +33,9 @@ a:hover{
 }
 
 .navegacao {
-    width: 100%; /* Ocupa toda a largura da tela */
+    width: 100%; 
 }
 
-.navegacao
-{
-    display: flex;
-}
 .navegar
 {
     display: flex;
@@ -144,6 +140,7 @@ header img {
     max-width: 30px;
     margin-left: 10px;
     align-self: end;
+    cursor: pointer;
 }
 
 .cards-admin h1 {
@@ -167,7 +164,14 @@ header img {
     margin: 0;
 }
 
-.cards-admin button {
+.admin-cards-button
+{
+    display: flex;
+    background-color: transparent;
+    border: none;
+}
+
+/* .cards-admin button {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -175,15 +179,19 @@ header img {
     border: none;
     border-radius: 10px;
     background-color: transparent;
-    width: 90%;
+    width: 1%;
     position: absolute;
     bottom: 10px;
-    left: 50%;
+    left: 97%;
     transform: translateX(-50%);
-}
+} */
 
 .cards-admin button img {
     max-width: 20px;
+}
+
+.cards-admin:hover{
+    background-color: rgb(69, 65, 65);
 }
 
 .icon {
@@ -203,7 +211,6 @@ footer {
 }
 
 .container {
-    display: flex;
     flex-wrap: wrap; 
     gap: 20px; 
 }
@@ -221,31 +228,55 @@ footer {
 
 }
 
+
+@media (min-width: 719px) {
+
+    header .navegacao {
+        display: block;
+    }
+    footer{
+        display: none;
+    };
+}
+
+
 @media (min-width: 620px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adapta o número de colunas */
-        grid-template-rows: auto;
+    /* main {
+        isplay: grid; 
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-rows: auto; 
+        display: flex;
         gap: 20px;
         justify-content: center;
         margin: 30px;
         flex: 1;
-    }
+    } */
 
     .cards-admin {
-        width: 100%; /* Faz com que as cartas ocupem a largura total disponível na coluna */
-        max-width: 600px; /* Define um limite máximo para a largura das cartas */
+        
+        max-width: 500px; 
     }
 
     #searchBar {
-        width: 70%;
+        width: 75%;
     }
+    
+}
+
+
+@media (min-width: 690px) {
+    .cards-admin {
+        
+        width: 590px; 
+    }
+
+
 }
 
 @media (min-width: 1360px) {
     main {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Continua adaptando o número de colunas */
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         grid-template-rows: auto;
         gap: 20px;
         justify-content: center;
@@ -259,5 +290,9 @@ footer {
 
     #searchBar {
         width: 70%;
+    }
+    .container
+    {
+        display: flex;
     }
 }
