css iformações do usuário funcional

--- a/public/css/homeAdmin.css
+++ b/public/css/homeAdmin.css
@@ -208,6 +208,7 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 20%;
+    position: fixed !important;
 }
 
 .container {
