--- a/public/css/informacoesUser.css
+++ b/public/css/informacoesUser.css
@@ -69,11 +69,9 @@ a:hover{
 
 
 main {
-    display: grid;
-    /* grid-template-columns: repeat(2, 140px);  */
-    grid-template-rows: auto; 
-    gap: 20px; 
+    display: flex;
     justify-content: center; 
+    align-items: center;
     margin: 10px;
     flex: 1;
 }
@@ -155,31 +153,7 @@ footer {
 }
 
 
-@media (min-width: 1360px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(2, 640px); 
-        grid-template-rows: auto; 
-        gap: 20px; 
-        justify-content: center; 
-        margin: 60px;
-        flex: 1; 
-    }
-    hr{
-        height: 20px;
-    }
-    header .navegacao {
-        display: block; 
-    }
-    footer {
-        display: none; 
-    }
-    #searchBar
-    {
-        width:70%;
-    }
-    
-} 
+
 
 
 
