--- a/src/views/allCars.ejs
+++ b/src/views/allCars.ejs
@@ -19,7 +19,7 @@
                 <div class="bg-dark p-4 navegar">
                     <a href="/viewAccout" class="text-white h4 ancora">Minha conta</a>
                     <form action="/homePageAdmin/<%=id%>">
-                        <button>Voltar ao menu</button>
+                        <button id="carros" ><a class="text-white h4 carros" >Voltar ao menu</a></button>
                     </form>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
