--- a/src/views/homePageAdmin.ejs
+++ b/src/views/homePageAdmin.ejs
@@ -19,7 +19,7 @@
                 <div class="bg-dark p-4 navegar">
                     <a href="/viewAccout" class="text-white h4 ancora">Minha conta</a>
                     <form action="/allCars/<%=login.IDUser%>">
-                        <button>Carros</button>
+                        <button id="carros" ><a class="text-white h4 carros" >Carros</a></button>
                     </form>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
