--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<title>usuário</title>
+<title>Minha conta</title>
 </head>
 <body>
 
@@ -17,8 +17,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/contaAdministrador/" class="text-white h4 ancora">Minha conta</a>
-                    <a href="/homePageAdmin/<%=admin %>" class="text-white h4 ancora">home</a>
+                    <a href="/homePageAdmin/" class="text-white h4 ancora">home</a>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
               </div>
