--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -17,7 +17,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/homePageAdmin/" class="text-white h4 ancora">home</a>
+                    <a href="/homePageAdmin/" class="text-white h4 ancora">Voltar ao menu</a>
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
               </div>
