--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -20,7 +20,7 @@
 
       <h1>CADASTRO</h1>
 
-      <form action="/user" method="post" onsubmit="return validateForm()">
+      <form action="/registerUser" method="post" onsubmit="return validateForm()">
         <div class="mb-3">
           <label for="userCPF" class="form-label">CPF</label>
           <input type="text" inputmode="numeric" id="userCPF" class="form-control" name="CPF" placeholder="Digite seu CPF" oninput="formatCPF(this)" required>
