vizualização da conta ok

--- a/src/views/homePageAdmin.ejs
+++ b/src/views/homePageAdmin.ejs
@@ -17,7 +17,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/viewAccout" class="text-white h4 ancora">Minha conta</a>
+                    <a href="/minhaConta/<%=id%>" class="text-white h4 ancora">Minha conta</a>
                     <form action="/allCars/<%=login.IDUser%>">
                         <button id="carros" ><a class="text-white h4 carros" >Carros</a></button>
                     </form>
