--- a/src/views/allCars.ejs
+++ b/src/views/allCars.ejs
@@ -17,7 +17,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/contaAdmin/<%=id%>" class="text-white h4 ancora">Minha conta</a>
+                    <a href="/minhaConta/<%=id%>" class="text-white h4 ancora">Minha conta</a>
                     <form action="/homePageAdmin/<%=id%>">
                         <button id="carros" ><a class="text-white h4 carros" >Voltar ao menu</a></button>
                     </form>
