--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -31,24 +31,29 @@
         </div>
 
         <div class="content" >
-            <p class="title-gerenciamento">GERENCIAMENTO DE <br> USUÁRIOS</p>
+            <p class="title-gerenciamento">MINHA CONTA</p>
         </div>
     </header>
     <main id="userList">
 
-        <form action="/informacoesUsers/<%=currentUser.IDUser%>/<%=admin%>" method="post" class="row g-3">
+        <form action="/minhaConta/<%=id%>" method="post" class="row g-3">
 
                 <div class="col-md-6">
-                  <label for="inputEmail4" class="form-label">ID Usuário</label>
-                  <input type="text" class="form-control" id="userId" value="<%=currentUser.IDUser %>" readonly >
+                  <label for="inputPassword4" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="userName" value="<%=currentUser.Name%>">
                 </div>
                 <div class="col-md-6">
-                  <label for="inputPassword4" class="form-label">Nome</label>
-                  <input type="text" class="form-control" id="userName" value="<%=currentUser.Name%>" readonly >
+                  <label for="inputPassword4" class="form-label">CPF</label>
+                  <input type="text" class="form-control" id="userCPF" value="<%=currentUser.CPF%>" readonly>
                 </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="userEmail" value="<%=currentUser.Email %>"  readonly >
+                  <input type="text" class="form-control" id="userEmail" value="<%=currentUser.Email %>">
+                </div>
+
+                <div class="col-12">
+                  <label for="inputAddress" class="form-label">Senha</label>
+                  <input type="text" class="form-control" id="userPassword" value="<%=currentUser.Password%>">
                 </div>
 
                 <div class="col-12">
@@ -57,8 +62,6 @@
                 </div>
 
                 <div class="col-12 controler">
-                    <input class="btn btn-primary" value="Alterar Permissão" onclick="updateUser()" style="width: 260px;" readonly/>
-                    <a href="/homePageAdmin/<%=admin%>" class="btn btn-danger">Cancelar</a>
                     <input class="btn btn-primary" value="Pronto" type="submit"/>
                 </div>
         </form>
@@ -75,17 +78,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script>
-         const allow = document.getElementById("userAllow");
-         const updateUser = () =>
-         {
-            if(allow.value == "Usuário")
-                allow.value = "Administrador"
-            else
-                allow.value = "Usuário"
-         }
-    </script>
 
 </body>
 </html>
