API vai sairgit add .!

--- a/src/views/registerCar.ejs
+++ b/src/views/registerCar.ejs
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <a href="/"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
+        <a href="/userCars/<%= user %>"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
         <div class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
     </header>
 
