alteração de permissão funcionando

--- a/src/views/informacoesUsers.ejs
+++ b/src/views/informacoesUsers.ejs
@@ -56,7 +56,7 @@
 
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Permissão</label>
-                    <input type="text" class="form-control" id="userAllow" value="<%= currentUser.IsAdmin == 1? "Administrador" : "Usuário" %>" readonly >
+                    <input type="text" class="form-control" id="userAllow" name="userAllow" value="<%= currentUser.IsAdmin == 1? "Administrador" : "Usuário" %>" readonly >
                 </div>
 
                 <div class="col-12 controler">
