--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="js/registerUser.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body class='modeAtual'>
@@ -28,10 +29,11 @@
           alert("Senha Incorreta!");
       </script>
     <%} %>
+    
 
     <h1>LOGIN</h1>
 
-    <form action="/" method="post">
+    <form action="/" method="post" onsubmit="return validateForm()" >
       <div class="mb-3">
         <label for="userInput" class="form-label">CPF</label>
         <input type="text" id="userInput" name="userInput" class="form-control" placeholder="Digite seu CPF"  oninput="formatCPF(this)">
