--- a/src/views/informacoesUsers.ejs
+++ b/src/views/informacoesUsers.ejs
@@ -19,7 +19,7 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 navegar">
-                    <a href="/contaAdministrador/" class="text-white h4 ancora">Minha conta</a>
+                    <a href="/minhaConta/<%=admin%>" class="text-white h4 ancora">Minha conta</a>
                     <a href="/homePageAdmin/<%=admin %>" class="text-white h4 ancora">home</a>          
                   <span class="text-muted">Toggleable via the navbar brand.</span>
                 </div>
