--- a/src/views/registerUser.ejs
+++ b/src/views/registerUser.ejs
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+  <%if (cpfExiste) { %>
+    <script>
+        alert("O cpf já existe! por favor faça login");
+    </script>
+  <%} %>
+
     <header>
         <a href="/"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
         <div class="logo"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
@@ -43,7 +49,7 @@
 
         <div class="mb-3">
           <label for="userPassword" class="form-label">Senha</label>
-          <input type="password" id="userPassword" class="form-control" name="password" placeholder="Digite sua senha" required>
+          <input type="password" id="userPassword" class="form-control" name="userPassword"" placeholder="Digite sua senha" required>
         </div>
 
         <div class="mb-3">
@@ -58,6 +64,11 @@
         
         <button type="submit" id="criarConta" class="btn btn-primary button">Criar conta</button>
       </form>
+
+      <div class="fazerLogin">
+        <p>Já tem uma conta?</p>
+        <a href="/">Fazer login</a>
+      </div>
     </main>
 </body>
 </html>
