--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -16,7 +16,7 @@
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 links">
                     <a href="/userCars/<%=login.IDUser%>" class="text-white h4 ancora">Meu carro</a>
-                    <a href="/viewAccount" class="text-white h4 ancora">Minha conta</a>
+                    <a href="/minhaConta/<%=login.IDUser%>" class="text-white h4 ancora">Minha conta</a> 
                     <a href="/notification" class="text-white h4 ancora">Notificações</a>
                     <a href="/" class="text-white h4 ancora">Sair</a>
                 </div>
