--- a/src/views/userCars.ejs
+++ b/src/views/userCars.ejs
@@ -15,8 +15,8 @@
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
-                  <h5 class="text-white h4">SUA CONTA</h5>
-                  <h5 class="text-white h4">AJUDA</h5>
+                  <a href="/minhaConta/<%=idUser%>" class="text-white h4 ancora">Minha conta</a> 
+                  <a href="/homePageUser/<%=idUser%>" class="text-white h4 ancora">Home</a> 
                 </div>
             </div>
             <nav class="navbar navbar-dark bg-dark">
