navegação entre as páginas 'Esqueceu sua Senha' ok

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,7 +43,7 @@
         <input type="password" id="senhaInput" name="senhaInput" class="form-control" placeholder="Digite sua senha">
       </div>
       <div class="forgotPassword text-end">
-        <a>Esqueceu sua senha?</a>
+        <a href="/recuperarSenha">Esqueceu sua senha?</a>
       </div>
       
       <button type="submit" class="btn btn-primary button">Entrar</button>
