--- a/src/views/codigoRecuperacao.ejs
+++ b/src/views/codigoRecuperacao.ejs
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Recuperação de senha</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-        <script src="script.js"></script>
-
-    <title>Recuperação de senha</title>
-
-</head>
+        <script src="/js/recuperacao.js"></script>
+        <script>
+            if(<%=incorreto%>)
+              alert('Código Incorreto');
+          </script>
+    </head>
 <body>
 
     <header>
-        <a href="index.html"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
+        <a href="/recuperarSenha"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
       <div class="logo" style="margin-top: 15%;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
     </header>
 
     <main>
 
         <h1>Recuperação de senha</h1>
+        <p>Um código de verificação será enviado para seu WhattsApp:</p>
 
-        <p>Um código de verificação será enviaod para o e-mail:</p>
-        <p>emailFicticio@gmail.com</p>
-
-        <form>
+        <form action="/codigoSenha" method="post">
             <div class="code-container">
-                <input type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input2')" id="input1">
-                <input type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input3')" id="input2">
-                <input type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input4')" id="input3">
-                <input type="text" class="code-input" maxlength="1" id="input4">
+                <input name="code" value="<%=code%>" hidden></p>
+                <input name="input1" type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input2')" id="input1">
+                <input name="input2" type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input3')" id="input2">
+                <input name="input3" type="text" class="code-input" maxlength="1" oninput="moveToNext(this, 'input4')" id="input3">
+                <input name="input4" type="text" class="code-input" maxlength="1" id="input4">
             </div>
              
               <button type="submit" class="btn btn-primary button">Conferir</button>
