--- a/src/views/novaSenha.ejs
+++ b/src/views/novaSenha.ejs
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/novaSenha.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Recuperação de senha</title>
 </head>
 <body>
 
     <header>
-        <a href="index.html"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
+        <a href="/recuperarSenha"><button type="submit" id="voltar" class="btn btn-primary button">Voltar</button></a>
       <div class="logo" style="margin-top: 15%;"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvSTvqQvA7WuJQm47fleJFI3bQ9Q3KXKwxTg&s" alt=""></div>
     </header>
 
     <main>
 
-        <h1>Recuperação de senha</h1>
+        <h1>Digite sua nova Senha</h1>
 
-        <form>
+        <form action="/novaSenha" method="post" onsubmit="return validateForm()">
               <div class="mb-3">
-                <label for="userInput" class="form-label">Digite seu CPF</label>
-                <input type="text" id="userInput" class="form-control" placeholder="Digite seu CPF" required>
+                <label for="novaSenha" class="form-label">Nova Senha</label>
+                <input type="password" id="novaSenha" class="form-control" placeholder="Digite sua Nova Senha" name="senha" required>
+              </div>
+
+              <div class="mb-3">
+                <label for="confirmSenha" class="form-label">Repetir Senha</label>
+                <input type="password" id="confirmSenha" class="form-control" placeholder="Repita sua Nova Senha" required>
               </div>
              
-              <button type="submit" class="btn btn-primary button">Procurar</button>
-          </form>
+              <button type="submit" class="btn btn-primary button">Pronto</button>
+        </form>
         
     </main>
 
